# Triebwerk

./: CMakeLists.txt
include/GLFW/: glfw3.h
src/: main.cpp
src/graphics/: window.cpp  window.hpp
src/input/: keyboard.cpp  keyboard.hpp  mouse.cpp  mouse.hpp
src/maths/: maths.hpp  vec2.cpp  vec2.hpp  vec3.cpp  vec3.hpp  vec4.cpp  vec4.hpp
